summative.moria.Moria.scala.error
Compilation error:
Moria:40: error: ')' expected but ';' found.
  right();
         ^Moria:48: error: ';' expected but 'def' found.
def moveAndTake () = {
^